tests/e2e/positive/const-eval/input.ei
int main() {
    int[2 + 2 * 4 / 2] arr;
    return len(arr) - 6;
}
