tests/e2e/negative/invalid-cast/input.ei
int main() {
    int[30] arr;
    int n = arr;

    int& p = arr as int&;

    uint64 big;
    uint32 truncated = big;
}
